loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:1: error: illegal start of simple pattern
for (var i <- 0 to 9) {
     ^LoopCourse:8: error: '<-' expected but '}' found.
	}
        ^