loopfor.LoopCourse.scala.code
for (var i <- 0 to 9) {
  for (var j <- 0 to 8) {
    avance ()
    gauche ()
  }
}